feat: customize middleware to validate jwt token
